Autocomplete search item (search for city and user).